Bug 981966 - fix OggWriter memory leak; r=kinetik,f=mccr8